# electron-rust-wasm-demo

./: .gitignore  README.md  package.json  webpack.renderer.additions.js
rust_wasm/: Cargo.toml
rust_wasm/src/: lib.rs
src/main/: index.js
src/renderer/: App.vue  flac.worker.js  index.js
src/renderer/assets/: custom.css  material.css
src/renderer/components/: RmsLayout.vue  SqrtLayout.vue
