[package]
name = "rust-web-flac"
version = "0.1.0"
authors = ["kykc"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "^0.3"
claxon = "^0.4"
wasm-bindgen = "0.2.23"
#num-traits = "^0.2"

[dependencies.web-sys]
version = "^0.3"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'FileReader',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
]